--- a/src/app/common/auth/login/login.component.html
+++ b/src/app/common/auth/login/login.component.html
@@ -11,9 +11,14 @@
   </div>
   <br />
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-2">
       <button type="submit" class="btn btn-primary" (click)="login()">
         Submit
+      </button>
+    </div>
+    <div class="col-md-2">
+      <button type="button" class="btn btn-secondary" (click)="signup()">
+        Signup
       </button>
     </div>
   </div>
