--- a/src/app/common/auth/login/login.component.html
+++ b/src/app/common/auth/login/login.component.html
@@ -1,4 +1,11 @@
-<h2>Login</h2>
+<h2>{{showSignup ? 'sign up' : Login}}</h2>
+<h2>'hello matt</h2>
+
+
+
+
+
+
 <form>
   <div class="row">
     <div class="col-md-6">
@@ -12,9 +19,9 @@
   <br />
   <div class="row">
     <div class="col-md-2">
-      <button type="submit" class="btn btn-primary" (click)="login()">
         Submit
-      </button>
+     
+      
     </div>
     <div class="col-md-2">
       <button type="button" class="btn btn-secondary" (click)="signup()">
