--- a/src/app/common/auth/login/login.component.html
+++ b/src/app/common/auth/login/login.component.html
@@ -1,5 +1,5 @@
-<h2>{{showSignup ? 'Sign Up Matt' : Login}}</h2>
-<h2></h2>
+<!-- <h2>{{showSignup ? 'Sign Up Matt' : Login}}</h2> -->
+<h2>{{showSignup ? 'Sign Up Matt' : 'Login'}}</h2>
 
 
 
@@ -15,6 +15,8 @@
       <input type="password" class="form-control" [(ngModel)]="password" name="password" />
     </div>
     <div class="col-md-6"></div>
+
+    
   </div>
   <br />
   <div class="row">
@@ -30,9 +32,37 @@
 <input [(ngModel)]="matts first label bro" type="text">
 <button> (click)> click bro</button> -->
 
-      <button type="button" class="btn btn-secondary" (click)="signup()">
-        Signup BRO
 
+
+      <button type="button" class="btn btn-secondary" (click)="login()">
+        Signup
+     
+     
+     
+        <!-- <button *ngIf="!showSignup" type="submit" class="btn btn-primary" (click)="login()">
+        Submit Man
+       
+        <button *ngIf="!showSignup" type="submit" class="btn btn-primary" (click)="signup()">
+        Submit Matt -->
+
+
+
+<!--         
+      <button type="button" class="btn btn-primary" (click)="login()">
+        Submit -->
+
+
+    
+     
+     
+        <button type="button" class="btn btn-secondary float-right" (click)="toggleSignup()">
+          {{ showSignup ? 'Cancel' : 'Signup' }}
+
+        </button>
+
+
+
+        
         <router-outlet></router-outlet>
       </button>
     </div>
